--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,3 @@
-
 Installing RStudio from Source
 =============================================================================
 
@@ -162,5 +161,11 @@ f) If your system supports AppArmor you may wish to add an AppArmor profile
    extras
       /apparmor
          rstudio-server
+         
+Optional installation instructions:
+You can also summarize the last part of the installation process by runnng the postinst scripts located at $SOURCE_DIRECTORY/build/package/linux
+and depending on your distribution (RHEL/CentOS or Debian?Ubuntu), cd into either rpm-script or debian-control and run 
+postinst* scripts. Remember to do the same after the uninstallation, note that this time, it will be postremove* scripts instead.
+
 
 
